# sealio

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-build.yml
release/: Sealio-Tauri-0.1.0-aarch64.dmg
scripts/: package-mac-tauri.sh
src/: main.tsx  native.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
